# Terminal_IDE

./: README.md
ppts/: Phase_0.pptx  phase_1.pptx  phase_2.pptx  phase_3.pptx  phase_4.pptx
source_code/: backend.cabal  useful_language_extensions.txt
source_code/app/: App.hs  CommonConfig.hs  JsonTypes.hs  Main.hs  VerifyEmail.hs
source_code/lib/: Db.hs  Mailing.hs  SendMail.hs  sample.json  token_flow  worked.txt
