cabal-version:      3.8
name:               backend
version:            0.1.0.0
description: Concurrency practice 
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall

executable app
    import:           warnings
    main-is:          Main.hs
    other-modules: Db
                 , App
                 , SendMail
                 , JsonTypes  
                 , VerifyEmail
                 , CommonConfig 
                 , Mailing
    -- other-extensions:
    build-depends: base >= 4.7 && < 5
                 , servant
                 , servant-server
                 , servant-blaze 
                 , servant-auth-server 
                 , servant-auth 
                 , servant-client 
                 , blaze-html 
                 , postgresql-simple
                 , text
                 , aeson
                 , wai
                 , warp
                 , password 
                 , uuid 
                 , time 
                 , async
                 , resource-pool 
                 , transformers 
                 , http-client 
                 , http-client-tls
                 -- , bytestring 
                 , cookie 
                 , wreq 
                 , lens 
                 , bytestring
    hs-source-dirs: app
                  , lib
    default-language: Haskell2010
    ghc-options: -threaded

-- executable testmail
--     import: warnings
--     main-is: SendMail.hs 
--     build-depends: base >= 4.7 && < 5
--                  , http-client 
--                  , http-client-tls 
--                  , aeson  
--                  , text 
--     hs-source-dirs: app
--                   , lib
--     default-language: Haskell2010
--


